# careers-watch

./: .gitignore  CLAUDE.md  GEMINI_BRIEF.md  README.md  ROADMAP.md  ROADMAP_ARCHIVE.md  WEBAPP_SPEC.md  big_companies.yml  careers_recovery.json  careers_to_find.md  collect_jobs.py  companies.json  pyproject.toml  refresh_companies.py  render.yaml  score.py
.claude/: settings.json
ats/: __init__.py  amazon_jobs.py  ashby.py  bamboohr.py  breezy.py  comeet.py  consider.py  detect.py  eightfold.py  getro.py  google_careers.py  greenhouse.py  jobvite.py  lemonade.py  lever.py  microsoft_careers.py  oracle_hcm.py  privya.py  smartrecruiters.py  successfactors.py  talentbrew.py  taleo.py  teamme.py  teamtailor.py  utils.py  workable.py  workday.py
bugs_to_fix/: ARCHIVE.md  BUG_LANDING_DEAD_GITHUB_LINKS.md  BUG_MARK_APPLIED_MISSING.md  BUG_RENDER_JOBS_PATH.md  BUG_SMARTRECRUITERS_ROUTING.md  BUG_TRACKER.md  BUG_VIOLA_GETRO_DUPES.md
docs/: scoring_calibration.md
future_devs/: ATS_AMAZON_JOBS_SPEC.md  ATS_BAMBOOHR_SPEC.md  ATS_BREEZY_SPEC.md  ATS_CHECKPOINT_CAREERS_SPEC.md  ATS_EIGHTFOLD_SPEC.md  ATS_GOOGLE_CAREERS_SPEC.md  ATS_JOBVITE_SPEC.md  ATS_MICROSOFT_CAREERS_SPEC.md  ATS_ORACLE_HCM_SPEC.md  ATS_SMARTRECRUITERS_SPEC.md  ATS_SUCCESSFACTORS_SPEC.md  ATS_TALENTBREW_SPEC.md  ATS_TALEO_SPEC.md  ATS_TEAMME_SPEC.md  BIG_COMPANIES_ATS_PARAMS_SPEC.md  DS_ANALYSIS_NOTEBOOK_SPEC.md  GITHUB_ACTIONS_SCHEDULE_SPEC.md  MULTI_AGENT_RESUME_TAILOR_SPEC.md  NEW_VC_ADAPTERS_SPEC.md  POSITION_FIRST_SEEN_SPEC.md  POSITION_LIVENESS_DIGEST_RENDER_SPEC.md  POSITION_LIVENESS_SPEC.md  (+41 more)
(+199 files in other folders)
