[project]
name = "careers-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=1.74.0",
    "httpx>=0.28.1",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
]
